# ringtalk

./: .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/lib/: main.dart
app/macos/Runner.xcodeproj/: project.pbxproj
apps/app/: .gitignore  .metadata  README.md  pubspec.yaml
apps/app/lib/: main.dart
apps/app/test/: widget_test.dart
apps/app/web/: index.html  manifest.json
apps/app/windows/: CMakeLists.txt
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: .env.example  app.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  index.tsx
apps/server/: .env.example  package.json  tsconfig.json
apps/server/prisma/: schema.prisma  seed.ts
apps/server/src/: app.module.ts  main.ts
docs/: chat.md  restructure-plan.md
scripts/: test-message-send.js
server/: package.json  tsconfig.json
server/prisma/: seed.ts
server/src/: app.module.ts  main.ts
server/src/auth/: auth.service.ts
server/src/chats/: chats.controller.ts
server/src/contacts/: contacts.module.ts  contacts.service.ts
server/src/messages/: messages.service.ts
server/src/rooms/: rooms.service.ts
server/src/users/: users.service.ts
server/src/websocket/: websocket.module.ts
shared/: tsconfig.json
(+150 files in other folders)
